src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CAC Cierre_Operativa_Consulta</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>En curso</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Resuelto</fullName>
        </values>
        <values>
            <fullName>Resuelto</fullName>
        </values>
        <values>
            <fullName>Transferido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CAC_Interaccion</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>En curso</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Resuelto</fullName>
        </values>
        <values>
            <fullName>Resuelto</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CAC_Operativa_Consulta</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>En curso</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Resuelto</fullName>
        </values>
        <values>
            <fullName>Resuelto</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>CAC_Acceso_a_grabacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Acceso a grabación</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CAC_Amelia_data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Amelia data</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CAC_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAC_Canal__c</fullName>
        <description>Campo del CAC que indica el canal de bankia que origina la  subinteracción.</description>
        <label>Canal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOL</fullName>
                </value>
                <value>
                    <fullName>BOLE</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>Cajeros</fullName>
                </value>
                <value>
                    <fullName>BOLA</fullName>
                </value>
                <value>
                    <fullName>Oficina</fullName>
                </value>
                <value>
                    <fullName>Gestor</fullName>
                </value>
                <value>
                    <fullName>CAC</fullName>
                </value>
                <value>
                    <fullName>Portal publico</fullName>
                </value>
                <value>
                    <fullName>TPV-Comercios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_Entrante_Coincide_Indicador__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo del CAC que indica si el número de teléfono llamante coincide con el número del cliente almacenado en base de datos. Este campo es leído por un campo fórmula para mostrar una imagen en función de si coincide o no.</description>
        <label>Entrante Coincide Indicador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAC_Entrante_Confirmado_Case__c</fullName>
        <description>Campo del CAC que sirve de indicador visual. Lee del campo CAC_Entrante_Coincide_Indicador__c</description>
        <formula>IMAGE(
IF(CAC_Entrante_Coincide_Indicador__c, &quot;/resource/OK&quot;, &quot;/resource/KO&quot; ), &quot;Entrante Coincide Confirmado&quot;,35,40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>¿Entrante=Confirmado?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAC_Fin_interaccion_Agente__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fin interacción Agente</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAC_Fin_interaccion_Amelia__c</fullName>
        <description>Campo que muestra la fecha/hora del fin de la interacción con Amelia</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fin interacción Amelia</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAC_Fin_interaccion_IVR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fin interacción IVR</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAC_Fin_interaccion_transferido__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fin interaccion transferido</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAC_Flujo__c</fullName>
        <description>Campo del CAC que indica si el contacto es entrante o saliente.</description>
        <label>Flujo</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Origin</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entrante</fullName>
                </value>
                <value>
                    <fullName>Saliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_Inicio_interaccion_Agente__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inicio interacción Agente</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAC_Inicio_interaccion_Amelia__c</fullName>
        <description>Campo que recoge la fecha/hora del inicio de la interacción con Amelia</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inicio interacción Amelia</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAC_Inicio_interaccion_IVR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inicio interacción IVR</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAC_Inicio_interaccion_transferido__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inicio interacción transferido</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CAC_Intencion__c</fullName>
        <description>Indicar el nombre del tipo de registro.</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Intención</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAC_Motivo_de_escalado__c</fullName>
        <description>Campo donde el Asistente Virtual recogerá el motivo por el que el contacto ha sido escalado.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Motivo de escalado</label>
        <length>13000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CAC_Motivo_de_estado__c</fullName>
        <description>Campo del CAC que es dependiente del campo &apos;Estado&apos;. Sirve para ampliar información sobre el estado de un caso.</description>
        <label>Motivo de estado</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacto interrumpido</fullName>
                </value>
                <value>
                    <fullName>Incidencia Técnica</fullName>
                </value>
                <value>
                    <fullName>Notificación</fullName>
                </value>
                <value>
                    <fullName>Transferido</fullName>
                </value>
                <value>
                    <fullName>No Localizado</fullName>
                </value>
                <value>
                    <fullName>Pérdida de Negocio</fullName>
                </value>
                <value>
                    <fullName>Sin Motivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_Nivel_Autenticacion_Cliente_Ind__c</fullName>
        <description>Campo del CAC que indica el nivel de autenticación del cliente. Es un campo que informa Genesys.
- Nivel 0 --&gt; DNI
- Nivel 1 --&gt; Clave
- Nivel 2 --&gt; Firma</description>
        <label>Nivel Autenticación Cliente Indicador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_Nivel_Autenticacion__c</fullName>
        <description>Campo del CAC que sirve para indicar (de forma gráfica) el nivel de autenticación del cliente:
- Nivel 0 --&gt; DNI
- Nivel 1 --&gt; Clave
- Nivel 2 --&gt; Firma</description>
        <formula>CASE(CAC_Nivel_Autenticacion_Cliente_Ind__c,
&quot;2&quot;,IMAGE(&quot;/resource/Nivel2&quot;, &quot;Nivel 2&quot;,35,35),
&quot;1&quot;,IMAGE(&quot;/resource/Nivel1&quot;, &quot;Nivel 1&quot;,35,35),
IMAGE(&quot;/resource/Nivel0&quot;, &quot;Nivel 0&quot;,35,35))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nivel Autenticación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAC_Numero_Llamante__c</fullName>
        <description>Campo del CAC que se informa con el número de teléfono llamante del cliente. Es un campo informado por Genesys.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Número Entrante</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CAC_Operacion__c</fullName>
        <description>Campo del CAC para la tipificación.</description>
        <label>Operación</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CAC_Producto__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anulación reintegro</fullName>
                </value>
                <value>
                    <fullName>Ayuda de uso</fullName>
                </value>
                <value>
                    <fullName>Bloqueo</fullName>
                </value>
                <value>
                    <fullName>Bloqueo/Desbloqueo</fullName>
                </value>
                <value>
                    <fullName>Clave de acceso</fullName>
                </value>
                <value>
                    <fullName>Comisiones</fullName>
                </value>
                <value>
                    <fullName>Compra Segura Clave OTP</fullName>
                </value>
                <value>
                    <fullName>Contratación</fullName>
                </value>
                <value>
                    <fullName>Duplicado</fullName>
                </value>
                <value>
                    <fullName>Firma electrónica</fullName>
                </value>
                <value>
                    <fullName>Fraude</fullName>
                </value>
                <value>
                    <fullName>Incidencia Cajero</fullName>
                </value>
                <value>
                    <fullName>Información del producto</fullName>
                </value>
                <value>
                    <fullName>Información de mi contrato</fullName>
                </value>
                <value>
                    <fullName>Ingreso/Traspaso</fullName>
                </value>
                <value>
                    <fullName>Modificación contrato</fullName>
                </value>
                <value>
                    <fullName>Problemas de acceso</fullName>
                </value>
                <value>
                    <fullName>Reintegro emergencia</fullName>
                </value>
                <value>
                    <fullName>Retenciones</fullName>
                </value>
                <value>
                    <fullName>Saldo/Movimientos</fullName>
                </value>
                <value>
                    <fullName>Solicitud PIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_Procedencia__c</fullName>
        <description>Campo del CAC que indica el servicio desde el cual se ha realizado la transferencia</description>
        <label>Transferido de</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>TAO</fullName>
                </value>
                <value>
                    <fullName>DCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_Producto__c</fullName>
        <description>Campo del CAC para la tipificación.</description>
        <label>Producto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Banca a Distancia</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Tarjeta Credito</fullName>
                    <label>Tarjeta Crédito</label>
                </value>
                <value>
                    <fullName>Tarjeta Debito</fullName>
                    <label>Tarjeta Débito</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_Servicio__c</fullName>
        <description>Campo del CAC para la tipificación.</description>
        <label>Servicio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TAO</fullName>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>DCCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_Servicio_destino__c</fullName>
        <description>Campo para, en el caso de transferir el caso, registrar el servicio de destino.</description>
        <label>Servicio destino</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>TAO</fullName>
                </value>
                <value>
                    <fullName>DCCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_Subproducto__c</fullName>
        <description>Campo del CAC para la tipificación.</description>
        <label>Subproducto</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CAC_Producto__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CAC_Telefono_gratuito__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para mostrar si el cliente ha contactado al CAC mediante el teléfono gratuito de Bankia</description>
        <label>Telefono gratuito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAC_Verbio_Canal__c</fullName>
        <description>Campo del CAC que almacena la pre-tipificación de Pregunta Abierta.  Este campo es informado por Genesys</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Verbio Canal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAC_Verbio_Operacion__c</fullName>
        <description>Campo del CAC que almacena la pre-tipificación de Pregunta Abierta.  Este campo es informado por Genesys</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Verbio Operación</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAC_Verbio_Producto__c</fullName>
        <description>Campo del CAC que almacena la pre-tipificación de Pregunta Abierta.  Este campo es informado por Genesys</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Verbio Producto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAC_Verbio_Servicio__c</fullName>
        <description>Campo del CAC que almacena la pre-tipificación de Pregunta Abierta.  Este campo es informado por Genesys</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Verbio Servicio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>CAC_Cierre</fullName>
        <active>true</active>
        <businessProcess>CAC Cierre_Operativa_Consulta</businessProcess>
        <description>Tipo de Registro del CAC. Se usa para las subinteracciones cerradas.</description>
        <label>Operativa-Consulta (Cerrado)</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAC_Interaccion</fullName>
        <active>true</active>
        <businessProcess>CAC_Interaccion</businessProcess>
        <description>Tipo de Caso del CAC. Representa las Interacciones (Contactos/llamadas) o Casos Padre</description>
        <label>Interaccion</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAC_Operativa</fullName>
        <active>true</active>
        <businessProcess>CAC_Operativa_Consulta</businessProcess>
        <description>Tipo de Registro del CAC. Hace referencia a las subinteracciones de tipo Operativa-Consulta.</description>
        <label>Operativa-Consulta</label>
    </recordTypes>
    <validationRules>
        <fullName>BloquearCambioCuenta_InteraccionCerrada</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName=&quot;CAC_Interaccion&quot;,OR(ISPICKVAL(Status,&quot;No Resuelto&quot;),ISPICKVAL(Status,&quot;Resuelto&quot;)), ISCHANGED( AccountId ))</errorConditionFormula>
        <errorMessage>No se puede modificar el cliente asociado una vez la interacción está cerrada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAC_Motivo_Estado_NoResuelto</fullName>
        <active>true</active>
        <description>Se requiere informar el campo &apos;Motivo de estado&apos; en el caso de que una subinteracción se cierre con estado &apos;No Resuelto&apos;.</description>
        <errorConditionFormula>AND(RecordType.DeveloperName=&quot;CAC_Operativa&quot;,ISPICKVAL(Status, &quot;No resuelto&quot;),(ISBLANK(TEXT(CAC_Motivo_de_estado__c ))))</errorConditionFormula>
        <errorMessage>El campo Motivo de estado debe estar informado.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CAC_No_cerrar_sin_tipificar</fullName>
        <active>true</active>
        <description>Requerir que se tipifique una subinteracción para poder cerrarse.</description>
        <errorConditionFormula>AND( OR(ISPICKVAL(Status,&quot;No Resuelto&quot;),ISPICKVAL(Status,&quot;Resuelto&quot;)), RecordType.DeveloperName=&quot;CAC_Operativa&quot;,OR(ISBLANK(TEXT( CAC_Producto__c)), ISBLANK(TEXT(CAC_Servicio__c)), AND(ISBLANK(TEXT( CAC_Subproducto__c )), ISPICKVAL(CAC_Producto__c, &quot;Otros&quot;) )))</errorConditionFormula>
        <errorMessage>Es necesario completar la tipificación</errorMessage>
    </validationRules>
</CustomObject>